--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
         <title>OR take 2</title>
         
 <link rel="stylesheet" type="text/css" href="styles.css">
- <script src="http://cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js"></script>
         
         
         
